omq-zeromq/tests/trybuild/compat-fail/monitor_receiver_type.stderr
error[E0308]: mismatched types
 --> tests/trybuild/compat-fail/monitor_receiver_type.rs:5:5
  |
4 | fn zmqrs_monitor_type(mut socket: PushSocket) -> mpsc::Receiver<SocketEvent> {
  |                                                  --------------------------- expected `futures_channel::mpsc::Receiver<SocketEvent>` because of return type
5 |     socket.monitor()
  |     ^^^^^^^^^^^^^^^^ expected `Receiver<SocketEvent>`, found `MonitorStream`
  |
  = note: expected struct `futures_channel::mpsc::Receiver<SocketEvent>`
             found struct `MonitorStream`
